bk_ida/bzip2ida/c1/uncompress
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/uncompress/src/bzip2.c:1955:35: error: use of undeclared identifier 'BZ2_crc32Table'
if ( mapSuffix( name, *( Char **)&BZ2_crc32Table[v8], v7) ) 
                                  ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/uncompress/src/obj/bzip2.o] Error 1
